@@ -1,1 +1,1 @@
-IDLE_VERSION = "1.0.3"
+IDLE_VERSION = "1.0.4"
